fix: adjust the blured shape position to prevent overlaping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,7 +82,7 @@ ul {
 }
 
 .blurred__shape-left {
-  top: 80%;
+  top: 65%;
   left: -50px;
 }
 
